fix: fix scrollbar appearing all the time on small screens
by introducing a padding around the boxes

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -38,6 +38,15 @@ body {
   scrollbar-width: none !important;
 }
 
+.main {
+  & > .container {
+    @media screen and (max-width: 1023px) {
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+  }
+}
+
 // card-anchor
 
 .custom-card {
@@ -646,8 +655,6 @@ rect {
     }
 
     .account {
-
-        min-width: 30em;
 
         .account-backend {
             font-size: 0.6em;
